# BizarroHomer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
dashboard/: 404.html  418.html  index.html
dashboard/css/: stylesheet.css
dashboard/dashboard_server/: index.html
dashboard/js/: program_output.js  values.js
dashboard/main/: index.html
dashboard/values/: index.html
dashboard_server/: BizarroHomerDashboardServer.service  BizarroHomerDiagnosticServer.service  CMakeLists.txt
dashboard_server/include/BizarroHomerDashboardServer/: ConnectionManager.hpp  DataManager.hpp  HTTPRequest.hpp  HTTPResponse.hpp
dashboard_server/src/: ConnectionManager.cpp  DataManager.cpp  HTTPRequest.cpp  HTTPResponse.cpp  main.cpp
dashboard_server/src/Util/: Parser.cpp
diagnostic_server/: BizarroHomerDiagnosticServer.service  CMakeLists.txt
diagnostic_server/include/BizarroHomerDiagnosticServer/: ConnectionManager.hpp  HTTPRequest.hpp  HTTPResponse.hpp
diagnostic_server/site/: index.html
diagnostic_server/site/css/: stylesheet.css
diagnostic_server/site/diagnostic_server/: index.html
diagnostic_server/site/ds4_led_control/: index.html
diagnostic_server/site/hardware_control/: index.html
diagnostic_server/site/tea/: index.html
diagnostic_server/src/: ConnectionManager.cpp  DataManager.cpp  HTTPRequest.cpp  HTTPResponse.cpp  main.cpp
diagnostic_server/src/Util/: Parser.cpp
diagnostic_server/webpage/: 404.html  418.html  index.html  script.js  style.css
diagnostic_server/webpage/tea/: index.html
dualshock4_led_control/: BizarroHomerDualShock4LEDControl.service  CMakeLists.txt
dualshock4_led_control/include/BizarroHomerDualShock4LEDControl/: LEDHandler.hpp
dualshock4_led_control/src/: LEDHandler.cpp  main.cpp
hardware_control/: BizarroHomerHardwareControl.service  CMakeLists.txt
hardware_control/include/BizarroHomerHardwareControl/: ControlHandler.hpp  HardwareManager.hpp  IOMap.hpp  IPCControlHandler.hpp  IPCStatusHandler.hpp  SingleSolenoid.hpp  StatusHandler.hpp
hardware_control/include/BizarroHomerHardwareControl/Communication/: IPCStatusHandler.hpp
hardware_control/include/BizarroHomerHardwareControl/Encoder/: DutyCycleEncoder.hpp
hardware_control/include/BizarroHomerHardwareControl/Hardware/: CAN.hpp  DigitalInput.hpp  (+2 more)
hardware_control/src/: ControlHandler.cpp  HardwareManager.cpp  IPCControlHandler.cpp  IPCStatusHandler.cpp  PWM.cpp  SingleSolenoid.cpp  StatusHandler.cpp  main.cpp
hardware_control/src/Encoder/: DutyCycleEncoder.cpp
hardware_control/src/Hardware/: CAN.cpp  DigitalInput.cpp  DigitalOutput.cpp  PWM.cpp  Solenoid.cpp
hardware_control/src/MotorControl/: PWMMotorController.cpp  PWMSparkMax.cpp
include/BizarroHomer/Drivers/: PWM.hpp
main/: BizarroHomer.service  CMakeLists.txt
main/include/BizarroHomer/Basic/: FeedbackManager.hpp  Mechanism.hpp  Robot.hpp  SignalHandler.hpp
main/include/BizarroHomer/Control/: Controls.hpp
main/include/BizarroHomer/Control/GameController/: DualShock4.hpp  GameControllerManager.hpp
main/include/BizarroHomer/DashboardServer/: ConnectionManager.hpp  DashboardServer.hpp  HTTPRequest.hpp  HTTPResponse.hpp
main/include/BizarroHomer/Drive/: Drive.hpp
main/include/BizarroHomer/Hardware/: CAN_PDP.hpp  CAN_TalonFX.hpp  DigitalInput.hpp  DigitalOutput.hpp  Digital_Input.hpp  Digital_Output.hpp  DutyCycle_ThroughBore.hpp  HardwareComponent.hpp  HardwareManager.hpp  IOMap.hpp  LEDStrip.hpp  LazyTalonFX.hpp  PDP.hpp  PWM.hpp  PWMMotorController.hpp  PWM_SparkMax.hpp  PressureTransducer.hpp  SparkMax.hpp  TalonFX.hpp  ThroughBore.hpp
main/include/BizarroHomer/Hardware/DigitalIO/: DigitalInput.hpp  DigitalOutput.hpp
main/include/BizarroHomer/Hardware/Encoder/: DutyCycleEncoder.hpp  DutyCycleThroughBore.hpp
main/include/BizarroHomer/Hardware/MotorControl/: LazyPWMSparkMax.hpp  LazyTalonFX.hpp  MotorController.hpp  MotorControllerManager.hpp  PWMMotorController.hpp  PWMSparkMax.hpp
main/include/BizarroHomer/Illumination/: BlinkyBlinky.hpp
main/include/BizarroHomer/Shooter/: AirTank.hpp  Shooter.hpp  ShooterBarrel.hpp  ShooterPivot.hpp
main/include/BizarroHomer/Util/: Color.hpp  LinearFilter.hpp  Parser.hpp  Song.hpp
main/src/: main.cpp
main/src/Basic/: FeedbackManager.cpp  Robot.cpp  SignalHandler.cpp
main/src/Control/: Controls.cpp
main/src/Control/GameController/: DualShock4.cpp  GameControllerManager.cpp
main/src/DashboardServer/: ConnectionManager.cpp  DashboardServer.cpp  DataManager.cpp  HTTPRequest.cpp  HTTPResponse.cpp
main/src/Drive/: Drive.cpp
main/src/Hardware/: CAN_PDP.cpp  CAN_TalonFX.cpp  DigitalInput.cpp  DigitalOutput.cpp  Digital_Input.cpp  Digital_Output.cpp  DutyCycle_ThroughBore.cpp  HardwareManager.cpp  LEDStrip.cpp  LazyTalonFX.cpp  PDP.cpp  PWM.cpp  PWMMotorController.cpp  PWM_SparkMax.cpp  PressureTransducer.cpp  SparkMax.cpp  TalonFX.cpp  ThroughBore.cpp
main/src/Hardware/DigitalIO/: DigitalInput.cpp  DigitalOutput.cpp
main/src/Hardware/Encoder/: DutyCycleEncoder.cpp  DutyCycleThroughBore.cpp
main/src/Hardware/MotorControl/: LazyPWMSparkMax.cpp  LazyTalonFX.cpp  MotorController.cpp  MotorControllerManager.cpp  PWMMotorController.cpp  PWMSparkMax.cpp  TalonFX.cpp
main/src/Illumination/: BlinkyBlinky.cpp
main/src/Shooter/: AirTank.cpp  Shooter.cpp  ShooterBarrel.cpp  ShooterPivot.cpp
main/src/Util/: Color.cpp  Parser.cpp  Song.cpp
music/: Thunderstruck.chrp  home_depot_beat_high.chrp  home_depot_beat_low.chrp  home_depot_beat_secondary.chrp
scripts/: init_workspace.sh
shared/: CMakeLists.txt
shared/include/BizarroHomerShared/Config/: Config.hpp.in
shared/include/BizarroHomerShared/IPC/: IPCReceiver.hpp  IPCReceiver.tpp  IPCSender.hpp  IPCSender.tpp
shared/src/IPC/: IPCReceiver.cpp  IPCSender.cpp
src/: main.cpp
src/Control/GameController/: GameControllerManager.cpp  PS4Controller.cpp
src/Drivers/: PWM.cpp
src/Drivers/MotorControl/: PWMMotorController.cpp  PWMSparkMax.cpp
src/Hardware/: CAN.cpp  PWM.cpp
src/Hardware/MotorControl/: PWMMotorController.cpp  PWMSparkMax.cpp
src/Hardware/Pneumatics/: CTREPCM.cpp
(+22 files in other folders)
